# hcipy

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_cpu.ipynb
.binder/: environment.yml
.github/: flake8_problem_matcher.json
.github/conda_environments/: docs_env.yml  optional_dependencies.txt  testing_env.yml
.github/workflows/: array-api-tests-skips.txt  array_api.yml  docs.yml  lint.yml  testing.yml  testing_jax.yml
doc/: 404.md  Makefile  Wavefront_sensing_1.ipynb  adaptive_optics.rst  api.rst  atmospheric_turbulence.rst  changelog.rst  citing.rst  compile_tutorials.py  conf.py  core.rst  coronagraphy.rst  data_reduction.rst  fields.rst  fourier_transforms.rst  getting_started.ipynb  getting_started.rst  getting_started_1.ipynb  getting_started_2.ipynb  getting_started_3.ipynb  getting_started_4.ipynb  index.rst  installation.rst  introduction.rst  misc_techniques.rst  miscellaneous.rst  mode_bases.rst  optical_systems.rst  overview.rst  performance.rst  requirements.txt  team.rst  wavefront_control.rst  wavefront_sensing.rst
doc/_static/: .gitignore  dummy.txt
doc/development/: contributing_guide.rst  new_release.rst  project_setup.rst
doc/examples/: index.rst
doc/getting_started/: 1_coordinates_grids_fields.ipynb  2_wavefronts_optical_systems.ipynb  3_atmosphere_adaptive_optics.ipynb  4_coronagraphy.ipynb  index.rst
doc/modules/: aperture.rst  atmosphere.rst  config.rst  coronagraphy.rst  field.rst  fourier.rst  interpolation.rst  io.rst  math_util.rst  metrics.rst  mode_basis.rst  optics.rst  plotting.rst  propagation.rst  statistics.rst  util.rst  wavefront_control.rst  wavefront_sensing.rst
doc/tutorials/: 01_Making_a_Telescope_PSF.ipynb  02_Segmented_Mirrors.ipynb  03_Pyramid_wavefront_sensor.ipynb  04_vector_apodizing_phase_plate.py.ipynb  04_vector_apodizing_phase_plate_propagation.ipynb  05_simple_polarimeter.ipynb  index.rst  (+1 more)
examples/: adaptive_optics.py  angular_spectrum_propagator.py  app_coronagraph.py  fiber_coronagraph_plots.py  fields.rst  fresnel.py  grids.py  interpolation.py  noisy_detector.py  phase_screens.py  plotting.py  polarization.py  power_spectral_density.py  propagator.py  shack_hartmann_test.py  test_controller_AO.py  test_filter.py  vortex.py  wavefront_sensor.py  wavefronts.py
examples2/: field_operations.py  fourier.py  noisy_detector.py  vortex.py  wavefront_sensor.py
hcipy/: __init__.py  dev.py  version.py
notebooks/: segmented_mirror_dev.ipynb
test/: adaptive_optics.py  angular_spectrum_propagator.py  angular_spectrum_propagator_test.py  ao_coronograph.py  apertures.py  colors.py  field_dot_scenarios.py  field_operations.py  fourier.py  gaussian_pokes_plots.py  holograms.py  par_map_reduce.py  phase_screens.py  propagator.py  propagator_test.py  shack_hartmann_test.py  wavefront_sensor.py  wavefronts.py
tests/: conftest.py  test_aperture.py  test_atmosphere.py  test_config.py  test_coronagraphy.py  test_field.py  test_fourier.py  test_grid.py  test_interpolation.py  test_io.py  test_math.py  test_metrics.py  test_mode_basis.py  test_multiprocessing.py  test_optics.py  test_plotting.py  test_propagation.py  test_segmented_hexike.py  test_util.py  test_wavefront_sensing.py
tutorial/: Getting started with HCIPy - I Coordinates, Grids and Fields.ipynb  Getting started with HCIPy - II Wavefronts and optical systems.ipynb  Getting started with HCIPy - III Atmosphere and adaptive optics.ipynb  Getting started with HCIPy - IV Coronagraphy.ipynb
tutorials/: Tutorial_01_Making_a_Telescope_PSF.ipynb
(+225 files in other folders)
